# fsor-cicd-demo

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  tests.yml
tests/: test_calc.py
